[gd_scene load_steps=69 format=2]

[ext_resource path="res://entites/player/PlayerKinematic.gd" type="Script" id=1]
[ext_resource path="res://assets/graphic/sprites/player/adventurer-v1.5-Sheet.png" type="Texture" id=2]
[ext_resource path="res://assets/graphic/sprites/particles/Fogo_propuncao.png" type="Texture" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( -0.131714, -1.1324, 350.803, 595.849 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.57235, 13.3677 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.222222, 0.933333, 1 )
colors = PoolColorArray( 1, 0.839216, 0.105882, 1, 0.952941, 0.537255, 0.0941176, 1, 1, 0.230017, 0.0313725, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
emission_shape = 1
emission_sphere_radius = 1.0
flag_disable_z = true
spread = 25.0
gravity = Vector3( 0, -120, 0 )
initial_velocity = 50.0
angular_velocity = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 1.5
scale_random = 1.0
color_ramp = SubResource( 4 )

[sub_resource type="Animation" id=6]
resource_name = "air_atk"
length = 0.45
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 96, 97, 98 ]
}

[sub_resource type="Animation" id=7]
resource_name = "atk1"
length = 0.66
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.35, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52 ]
}

[sub_resource type="Animation" id=8]
resource_name = "dash"
length = 0.55
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 24, 25, 26, 27, 28 ]
}

[sub_resource type="Animation" id=9]
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 18, 19, 20, 21 ]
}

[sub_resource type="Animation" id=10]
resource_name = "fall"
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 22, 23 ]
}

[sub_resource type="Animation" id=11]
resource_name = "idle"
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=12]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 14, 15, 16, 17 ]
}

[sub_resource type="Animation" id=13]
length = 0.4
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 79, 80 ]
}

[sub_resource type="Animation" id=14]
length = 0.8
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 81, 82, 83, 84 ]
}

[sub_resource type="Animation" id=15]
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 0.00784314, 0.00784314, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=16]
length = 1.2
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "air_atk"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "atk1"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "dash"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "double_jump"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "fall"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "jump"

[sub_resource type="AnimationNodeAnimation" id=24]
animation = "jump_wall"

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "ladder"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "walk"

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachineTransition" id=35]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=36]

[sub_resource type="AnimationNodeStateMachineTransition" id=37]

[sub_resource type="AnimationNodeStateMachineTransition" id=38]

[sub_resource type="AnimationNodeStateMachineTransition" id=39]

[sub_resource type="AnimationNodeStateMachineTransition" id=40]

[sub_resource type="AnimationNodeStateMachineTransition" id=41]

[sub_resource type="AnimationNodeStateMachineTransition" id=42]

[sub_resource type="AnimationNodeStateMachineTransition" id=43]

[sub_resource type="AnimationNodeStateMachineTransition" id=44]

[sub_resource type="AnimationNodeStateMachineTransition" id=45]

[sub_resource type="AnimationNodeStateMachineTransition" id=46]

[sub_resource type="AnimationNodeStateMachineTransition" id=47]

[sub_resource type="AnimationNodeStateMachineTransition" id=48]

[sub_resource type="AnimationNodeStateMachineTransition" id=49]

[sub_resource type="AnimationNodeStateMachineTransition" id=50]

[sub_resource type="AnimationNodeStateMachineTransition" id=51]

[sub_resource type="AnimationNodeStateMachineTransition" id=52]

[sub_resource type="AnimationNodeStateMachineTransition" id=53]

[sub_resource type="AnimationNodeStateMachineTransition" id=54]

[sub_resource type="AnimationNodeStateMachineTransition" id=55]

[sub_resource type="AnimationNodeStateMachineTransition" id=56]

[sub_resource type="AnimationNodeStateMachineTransition" id=57]

[sub_resource type="AnimationNodeStateMachineTransition" id=58]

[sub_resource type="AnimationNodeStateMachineTransition" id=59]

[sub_resource type="AnimationNodeStateMachineTransition" id=60]

[sub_resource type="AnimationNodeStateMachineTransition" id=61]

[sub_resource type="AnimationNodeStateMachineTransition" id=62]

[sub_resource type="AnimationNodeStateMachineTransition" id=63]

[sub_resource type="AnimationNodeStateMachine" id=64]
states/air_atk/node = SubResource( 17 )
states/air_atk/position = Vector2( 792.804, 125.492 )
states/atk1/node = SubResource( 18 )
states/atk1/position = Vector2( 586.804, 125.492 )
states/dash/node = SubResource( 19 )
states/dash/position = Vector2( 379.804, -37.5084 )
states/double_jump/node = SubResource( 20 )
states/double_jump/position = Vector2( 133.804, 293.492 )
states/fall/node = SubResource( 21 )
states/fall/position = Vector2( 113.804, -210.508 )
states/idle/node = SubResource( 22 )
states/idle/position = Vector2( 12.8039, 54.4916 )
states/jump/node = SubResource( 23 )
states/jump/position = Vector2( -273.196, 293.492 )
states/jump_wall/node = SubResource( 24 )
states/jump_wall/position = Vector2( 609.52, -42.0923 )
states/ladder/node = SubResource( 25 )
states/ladder/position = Vector2( 609.52, 312.39 )
states/walk/node = SubResource( 26 )
states/walk/position = Vector2( -288.196, -107.508 )
transitions = [ "idle", "walk", SubResource( 27 ), "walk", "idle", SubResource( 28 ), "walk", "jump", SubResource( 29 ), "idle", "jump", SubResource( 30 ), "jump", "double_jump", SubResource( 31 ), "double_jump", "idle", SubResource( 32 ), "double_jump", "walk", SubResource( 33 ), "jump", "fall", SubResource( 34 ), "double_jump", "fall", SubResource( 35 ), "fall", "double_jump", SubResource( 36 ), "fall", "idle", SubResource( 37 ), "fall", "walk", SubResource( 38 ), "walk", "fall", SubResource( 39 ), "idle", "fall", SubResource( 40 ), "idle", "dash", SubResource( 41 ), "fall", "dash", SubResource( 42 ), "walk", "dash", SubResource( 43 ), "jump", "dash", SubResource( 44 ), "double_jump", "dash", SubResource( 45 ), "dash", "fall", SubResource( 46 ), "dash", "idle", SubResource( 47 ), "dash", "walk", SubResource( 48 ), "dash", "double_jump", SubResource( 49 ), "idle", "atk1", SubResource( 50 ), "walk", "atk1", SubResource( 51 ), "atk1", "idle", SubResource( 52 ), "atk1", "walk", SubResource( 53 ), "jump", "air_atk", SubResource( 54 ), "double_jump", "air_atk", SubResource( 55 ), "fall", "air_atk", SubResource( 56 ), "air_atk", "fall", SubResource( 57 ), "double_jump", "jump_wall", SubResource( 58 ), "jump", "jump_wall", SubResource( 59 ), "fall", "jump_wall", SubResource( 60 ), "dash", "jump_wall", SubResource( 61 ), "jump_wall", "jump", SubResource( 62 ), "jump_wall", "fall", SubResource( 63 ) ]
graph_offset = Vector2( -365.48, -134.578 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=65]
resource_local_to_scene = false

[node name="PlayerKinematic" type="KinematicBody2D"]
position = Vector2( 0.094471, 0 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = SubResource( 1 )
vframes = 16
hframes = 7

[node name="Body" type="CollisionShape2D" parent="."]
position = Vector2( -0.0293469, 5.01027 )
shape = SubResource( 2 )

[node name="PlayerCamera" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="ColissionWall" type="RayCast2D" parent="."]
rotation = 4.71239
enabled = true
cast_to = Vector2( 0, 7 )

[node name="DoubleJumpParticle" type="Particles2D" parent="."]
position = Vector2( 4.42004, 17.3101 )
rotation = 1.5708
emitting = false
amount = 200
lifetime = 0.4
one_shot = true
speed_scale = 1.5
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )

[node name="DoubleJumpParticle2" type="Particles2D" parent="."]
position = Vector2( -4.85854, 17.188 )
rotation = 1.5708
emitting = false
amount = 200
lifetime = 0.4
one_shot = true
speed_scale = 1.5
randomness = 1.0
local_coords = false
process_material = SubResource( 5 )
texture = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/air_atk = SubResource( 6 )
anims/atk1 = SubResource( 7 )
anims/dash = SubResource( 8 )
anims/double_jump = SubResource( 9 )
anims/fall = SubResource( 10 )
anims/idle = SubResource( 11 )
anims/jump = SubResource( 12 )
anims/jump_wall = SubResource( 13 )
anims/ladder = SubResource( 14 )
anims/take_damage = SubResource( 15 )
anims/walk = SubResource( 16 )

[node name="AnimationTree" type="AnimationTree" parent="AnimationPlayer"]
tree_root = SubResource( 64 )
anim_player = NodePath("..")
active = true
process_mode = 0
parameters/playback = SubResource( 65 )

[node name="Times" type="Node" parent="."]

[node name="DashDelay" type="Timer" parent="Times"]
wait_time = 0.8
one_shot = true

[node name="AtkTime" type="Timer" parent="Times"]
wait_time = 0.6
one_shot = true

[node name="DashTime" type="Timer" parent="Times"]
wait_time = 0.4
one_shot = true

[node name="DelayAfterDamageTime" type="Timer" parent="Times"]
one_shot = true

[node name="AirAtkTime" type="Timer" parent="Times"]
wait_time = 0.4
one_shot = true
[connection signal="timeout" from="Times/DashDelay" to="." method="_on_DashDelay_timeout"]
[connection signal="timeout" from="Times/AtkTime" to="." method="_on_AtkTime_timeout"]
[connection signal="timeout" from="Times/DashTime" to="." method="_on_DashTime_timeout"]
[connection signal="timeout" from="Times/DelayAfterDamageTime" to="." method="_on_DelayAfterDamageTime_timeout"]
[connection signal="timeout" from="Times/AirAtkTime" to="." method="_on_AirAtkTime_timeout"]
